--- a/paoding-rose-jade-demo/pom.xml
+++ b/paoding-rose-jade-demo/pom.xml
@@ -6,18 +6,14 @@
 
     <groupId>sunxch</groupId>
     <artifactId>paoding-rose-jade-demo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>net.paoding</groupId>
             <artifactId>paoding-rose-jade</artifactId>
-            <version>2.0.u01</version>
-        </dependency>
-        <dependency>
-            <groupId>net.paoding</groupId>
-            <artifactId>paoding-rose-web</artifactId>
-            <version>2.0.u01</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
